Version 0.7-0

	*  .llvm() has a .duplicate argument that allows the caller to control which arguments are
	   explicitly duplicated before the call. .llvm() guesses based on readonly variables and is
	   conservative otherwise, leading potentially to unnecessary copies.

	*  getMetadata(module) method to get all the metadata elements in the Modue.

	*  Constructors for additional Pass objects -
	      createAgressiveDCEPass(), reateDeadCodeEliminationPass(), createDeadStoreEliminationPass()

	*  Function[[ name ]] method

	*  getNULLPointer() function

	*  createConstant() with a type converts the value to that.

	*  getValue() and methods for different types of Constant types.

	*  getNULLPointer() used, for example, when initializing
   	   global variables that are pointers.

	*  getCondition() for BranchInst objects.

	*  isInBounds() and isInBounds()<-

	*  byVal() and byVal()<-

	*  Better error handling for parserIR()

	*  Update enum definitions for 3.4

	*  Minor changes for LLVM 3.4 (fields in TargetOptions that were removed)

Version 0.6-0

	*  added generatePTX() to convert Module to PTX code. See Rnvvm and libNVVM
	   for other an additional approach.

	*  added support specifying address space when creating pointer types

	*  added CreateFPTrunc() and CreateTrunc()

	*  added llvmDump() to examine instructions in IR form

	*  added setMetadata(), getMetadata() and getNumOperands() & getOperands()

	*  eraseFromParent(), removeFromParent()

	*  insertBefore(), insertAfter(), moveBefore()

	*  isa() for Instruction classes.

	*  More support for raw and formatted ostreams

	*  setDataLayout() method for Module.

Version 0.5-0

	*  show() methods for Module, Function, Type to make the
	   objects more informative when displayed.

	*  export getBlocks() function.

	*  sapply() method for iterating over a block

	*  get function attributes

	*  Set and get attributes on parameters

	*  Access parameters as Argument objects, e.g. fun[[1]]
